# generatekey

./: .flake8  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
generatekey/: __init__.py  core.py
tests/: test_generatekey.py
