[tool.poetry]
name = "generatekey"
version = "0.1.0"
description = "key generator"
authors = ["Manuel Pita <mpita1984@gmail.com>"]
readme = "README.md"
packages = [{ include = "generatekey" }]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest = "8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
generatekey = "generatekey.generatekey:main"
